--- a/scss/blocks/main-nav.scss
+++ b/scss/blocks/main-nav.scss
@@ -10,9 +10,10 @@
 			text-transform: uppercase;
 		}
 	}
+ display: none;
 
-	@media (min-width: $screen-sm) {
-		display: none;
+	@media (min-width: $screen-lg) {
+		display: block;
 	}
 
 	&__list {
