--- a/scss/blocks/gallery.scss
+++ b/scss/blocks/gallery.scss
@@ -4,7 +4,10 @@
 	padding-top: 50px;
 
 	h2 {
-		font-size: 50px;
+		font-size: 30px;
+		@media (min-width: $screen-lg) {
+			font-size: 50px;
+		}
 	}
 
 	p,
@@ -20,37 +23,59 @@
 
 		&__title {
 
-			@media (min-width: 1280px) {
+		&__title:before {
+		content: "";
+		background-color: $color-main;
+		height: 1px;
+		width: 75%;
+		position: absolute;
+		display: block;
+		top: -3px;
+		left: -10px;
+	}
+
+	&__title:after {
+		content: "";
+		background-color: $color-main;
+		height: 1px;
+		width: 75%;
+		position: absolute;
+		display: block;
+		bottom: -5px;
+		left: -10px;
+	}
+
+			@media (min-width: $screen-lg) {
 			position: absolute;
 			bottom: 0px;
 			left: -50px;
 			writing-mode: tb-rl;
 			transform: rotate(180deg);
 			}
+			&:before {
+		  content: "";
+		  position: absolute;
+		  display: block;
+		  height: 525px;
+		  width: 2px;
+		  left: 30px;
+		  background-color: $color-main;
+		  padding-bottom: 40px;
+
+		}
+
+		&:after {
+		  content: "";
+		  position: absolute;
+		  display: block;
+		  height: 525px;
+		  width: 2px;
+		  left: 105px;
+		  background-color: $color-main;
+		  padding-top: 40px;
+		}
 	}
 
-	&__title:before {
-  content: "";
-  position: absolute;
-  display: block;
-  height: 525px;
-  width: 2px;
-  left: 30px;
-  background-color: $color-main;
-  padding-bottom: 40px;
-
-}
-
-&__title:after {
-  content: "";
-  position: absolute;
-  display: block;
-  height: 525px;
-  width: 2px;
-  left: 105px;
-  background-color: $color-main;
-  padding-top: 40px;
-}
 
 
 		&__item {
