--- a/scss/blocks/logo.scss
+++ b/scss/blocks/logo.scss
@@ -1,7 +1,9 @@
 .logo {
-	margin-top: 30px;
+	margin-top: 50px;
+	margin-left: 40px;
 
-	@media (min-width: $screen-sm) {
-		margin-left: 30px;
+	@media (min-width: $screen-lg) {
+		margin-left: 40px;
+		margin-top: 10px;
 	}
 	}
