--- a/scss/grid.scss
+++ b/scss/grid.scss
@@ -28,10 +28,6 @@
 
 
 
-.page-header {
-  background-image: url(../img/bg_main.jpg);
-}
-
 /*.demo-block {
   padding: 0.5em 1em;
   background-color: #bada55;
@@ -50,7 +46,24 @@
 	margin-left: 10px;
 }*/
 
-@media (min-width: 1280px) {
+.col-1,
+.col-2,
+.col-3,
+.col-4,
+.col-5,
+.col-6,
+.col-7,
+.col-8,
+.col-9,
+.col-10,
+.col-11,
+.col-12 {
+  padding-left: 15px;
+  padding-right: 15px;
+  width: 100%;
+}
+
+@media (min-width: $screen-lg) {
   .col-1 {
     width: 8.33%;
     flex: 0 0 8.33%;
