--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,6 +8,7 @@
 
 @import 'blocks/promo-wrap';
 @import 'blocks/form';
+@import 'blocks/btn-mobail';
 @import 'blocks/gallery';
 @import 'blocks/page-map';
 @import 'blocks/temp';
