жанры-кнопку на место, галерея - скрыла блоки, карта-кнопку на место

--- a/scss/blocks/btn-mobail.scss
+++ b/scss/blocks/btn-mobail.scss
@@ -17,6 +17,8 @@
 			h2 {
 				color: $color-white;
 				margin: 0;
+				font-size: 16px;
+				padding-top: 7px;
 			}
 		
 		@media (min-width: $screen-lg) {
