--- a/css/style.css
+++ b/css/style.css
@@ -473,10 +473,15 @@ a {
   padding: 18px;
   margin-bottom: 32px; }
   .btn-mobail a {
-    text-align: center; }
+    text-align: center;
+    font-weight: normal;
+    font-size: 16px;
+    text-transform: uppercase; }
   .btn-mobail h2 {
     color: #f9fcfc;
-    margin: 0; }
+    margin: 0;
+    font-size: 16px;
+    padding-top: 7px; }
 
 .gallery {
   color: #f9fcfc;
@@ -518,37 +523,38 @@ a {
     .gallery__item--yang {
       background-image: url(../img/video_card_img_2.jpg);
       background-repeat: no-repeat;
-      height: 169px; }
+      height: 169px;
+      display: none; }
     .gallery__item--calm {
       background-image: url(../img/video_card_img_3.jpg);
       background-repeat: no-repeat;
       height: 169px;
-      margin-top: 32px; }
+      margin-top: 32px;
+      display: none; }
     .gallery__item--trofimov {
       background-image: url(../img/video_card_img_4.jpg);
       background-repeat: no-repeat;
       height: 169px;
-      margin-top: 32px; }
+      margin-top: 32px;
+      display: none; }
     .gallery__item--cherry {
       background-image: url(../img/video_card_img_1.jpg);
       background-repeat: no-repeat;
-      height: 569px;
-      margin-left: 100px;
-      -webkit-box-flex: 1;
-          -ms-flex-positive: 1;
-              flex-grow: 1; }
+      height: 187px;
+      padding-left: 25px;
+      padding-right: 15px; }
   .gallery--offset {
     margin-top: auto; }
 
 .page-map {
-  margin-top: 90px; }
+  margin-top: 33px; }
   .page-map__contact {
     margin-bottom: 15px; }
+    .page-map__contact h2 {
+      font-size: 30px;
+      margin: 0; }
   .page-map__address {
     padding-top: 30px; }
-  .page-map h2 {
-    font-size: 30px;
-    margin: 0; }
   .page-map__title {
     width: 80%; }
   .page-map__title:before {
@@ -587,6 +593,8 @@ a {
       font-size: 30px; }
     .page-map .form p {
       color: #021a23; }
+  .page-map .btn-mobail {
+    margin-top: 15px; }
 
 .temp {
   color: #f9fcfc;
@@ -744,7 +752,7 @@ a {
     .genres__card--fortepiano {
       background-image: url(../img/directions_card_fortepiano.jpg);
       background-repeat: no-repeat;
-      width: 65%; }
+      width: 73%; }
       .genres__card--fortepiano p {
         width: 190px; }
     .genres__card--lectures {
@@ -765,14 +773,17 @@ a {
           -ms-writing-mode: tb-rl;
               writing-mode: tb-rl;
       -webkit-transform: rotate(180deg);
-              transform: rotate(180deg); }
+              transform: rotate(180deg);
+      position: relative;
+      left: 255px;
+      top: -173px; }
       .genres__card--all h3 {
         font-weight: normal; }
   .genres__card-title {
     margin: 0; }
 
 .footer {
-  margin-top: 85px; }
+  margin-top: 0; }
   .footer__logo {
     color: #eec643; }
   .footer__socials {
@@ -890,16 +901,34 @@ a {
         width: 2px;
         left: 105px;
         background-color: #eec643;
-        padding-top: 40px; }
+        padding-top: 40px;
+        top: 0; }
+        .gallery__item--yang {
+          display: -webkit-box;
+          display: -ms-flexbox;
+          display: flex; }
+        .gallery__item--calm {
+          display: -webkit-box;
+          display: -ms-flexbox;
+          display: flex; }
+        .gallery__item--trofimov {
+          display: -webkit-box;
+          display: -ms-flexbox;
+          display: flex; }
+        .gallery__item--cherry {
+          height: 569px;
+          margin-left: 100px; }
+    .page-map {
+      margin-top: 90px; }
       .page-map__contact {
         display: -webkit-box;
         display: -ms-flexbox;
         display: flex;
         margin-bottom: 45px; }
+        .page-map__contact h2 {
+          font-size: 50px; }
       .page-map__address {
         padding-top: 10px; }
-      .page-map h2 {
-        font-size: 50px; }
       .page-map__title:before {
         height: 2px; }
       .page-map__title:after {
@@ -1000,6 +1029,9 @@ a {
               -ms-writing-mode: tb-rl;
                   writing-mode: vertical-rl;
           -webkit-transform: rotate(270deg);
-                  transform: rotate(270deg); } }
+                  transform: rotate(270deg);
+          position: static; }
+    .footer {
+      margin-top: 85px; } }
 
 /*# sourceMappingURL=style.css.map */
