--- a/scss/blocks/genres.scss
+++ b/scss/blocks/genres.scss
@@ -136,7 +136,7 @@
 		&--fortepiano {
 			background-image: url(../img/directions_card_fortepiano.jpg);
 			background-repeat: no-repeat;
-			width: 65%;
+			width: 73%;
 			@media (min-width: $screen-lg) {
 				width: 100%;
 			}
@@ -172,6 +172,10 @@
 			position: relative;
 			writing-mode: tb-rl;
 			transform: rotate(180deg);
+			position: relative;
+			left: 255px;
+			top: -173px;
+
 
 			h3 {
 			font-weight: normal;
@@ -182,7 +186,8 @@
 				color: $color-white;
 				writing-mode: vertical-rl;	
 				transform: rotate(270deg);
-				
+				position: static;
+		
 			}
 		}
 	}
