--- a/scss/blocks/page-map.scss
+++ b/scss/blocks/page-map.scss
@@ -68,7 +68,7 @@
 
 .map {
 	height: 470px;
-	padding-left: 0;
+	padding-left: 20px;
 }
 .form {
 	height: 570px;
@@ -96,6 +96,7 @@
 }
 .btn-mobail {
 	margin-top: 15px;
+	width: 87%;
 }
 
 }
